<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/home_class_name"
            android:src="@drawable/ic_class_banner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/home_class_name"
            style="@style/CustomTextView18Bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/home_class_desc" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lihat_materi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_btn_materi"
            style="@style/CustomRoundedButton" />

    </LinearLayout>
</ScrollView>